--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,7 +5,7 @@
     <script src="assets/js/angular.min.js"></script>
     <script src="assets/js/angular-ui-router.min.js"></script>
     <script src="assets/js/ocLazyLoad.min.js"></script>
-    <div ng-include="'static/include/header.html'"></div>
+    <div ng-include="'static/include/head.html'"></div>
 
 </head>
 
