--- a/src/static/profile.html
+++ b/src/static/profile.html
@@ -88,7 +88,7 @@
                             <div class="pmbb-view">
                                 <dl class="dl-horizontal">
                                     <dt>Full Name</dt>
-                                    <dd>Mallinda Hollaway</dd>
+                                    <dd>{{profile.full_name}}</dd>
                                 </dl>
                                 <dl class="dl-horizontal">
                                     <dt>Gender</dt>
