--- a/src/static/profile.html
+++ b/src/static/profile.html
@@ -19,7 +19,7 @@
 
         <ul class="main-menu">
             <li>
-                <a href="/"><i class="zmdi zmdi-home"></i> Home</a>
+                <a href="/add_list"><i class="zmdi zmdi-home"></i> Dashboard</a>
             </li>
             <li>
                 <a href="" data-toggle="modal" data-target="#exampleModal"><i class="zmdi zmdi-collection-add"></i> Add Task</a>
