--- a/src/static/task.html
+++ b/src/static/task.html
@@ -74,7 +74,7 @@
                         <div class="modal-body">
                             <form role="form" ng-submit="add_task()">
                                 <div class="form-group fg-line">
-                                    <input ng-model="task.task" type="text" class="form-control input-sm"
+                                    <input ng-model="a_task.task" type="text" class="form-control input-sm"
                                         placeholder="Enter the task">
                                 </div>
 
