--- a/src/static/task.html
+++ b/src/static/task.html
@@ -72,9 +72,9 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <form role="form" ng-submit="add_task()">
+                            <form ng-submit="add_task()" role="form">
                                 <div class="form-group fg-line">
-                                    <input ng-model="a_task.task" type="text" class="form-control input-sm"
+                                    <input type="text" ng-model="task_add.task" class="form-control input-sm"
                                         placeholder="Enter the task">
                                 </div>
 
