task list created

--- a/src/static/add_list.html
+++ b/src/static/add_list.html
@@ -5,7 +5,7 @@
             <i class="zmdi zmdi-long-arrow-left" data-ma-action="sidebar-close"></i>
         </div>
 
-        <ul class="smm-alerts" style="background-color: blueviolet;">
+        <ul class="smm-alerts">
             <h4>Hello!!</h4>
             <h5>Keep Writing!!</h5>
         </ul>
