--- a/src/static/task.html
+++ b/src/static/task.html
@@ -15,7 +15,7 @@
                 <a href="/"><i class="zmdi zmdi-home"></i> Dashboard</a>
             </li>
             <li>
-                <a href="" data-toggle="modal" data-target="#exampleModal"><i class="zmdi zmdi-collection-add"></i> Add
+                <a href=""><i class="zmdi zmdi-collection-add"></i> Add
                     Task</a>
             </li>
             <li>
