login.html added

--- a/src/static/add_list.html
+++ b/src/static/add_list.html
@@ -15,7 +15,7 @@
                 <a href="/"><i class="zmdi zmdi-home"></i> Dashboard</a>
             </li>
             <li class="active">
-                <a href="" data-toggle="modal" data-target="#exampleModal"><i class="zmdi zmdi-collection-add"></i> Add
+                <a href="/add_list"><i class="zmdi zmdi-collection-add"></i> Add
                     list</a>
             </li>
             <li>
