--- a/src/static/profile.html
+++ b/src/static/profile.html
@@ -1,238 +1,129 @@
 <section id="main">
-
     <aside id="s-main-menu" class="sidebar">
-        <div class="smm-header">
-            <i class="zmdi zmdi-long-arrow-left" data-ma-action="sidebar-close"></i>
-        </div>
-
         <ul class="smm-alerts">
-            <li data-user-alert="sua-messages" data-ma-action="sidebar-open" data-ma-target="user-alerts">
-                <i class="zmdi zmdi-email"></i>
+            <li data-ma-action="sidebar-open" data-ma-target="user-alerts">
+                <i class="zmdi zmdi-account"></i>
             </li>
-            <li data-user-alert="sua-notifications" data-ma-action="sidebar-open" data-ma-target="user-alerts">
-                <i class="zmdi zmdi-notifications"></i>
-            </li>
-            <li data-user-alert="sua-tasks" data-ma-action="sidebar-open" data-ma-target="user-alerts">
-                <i class="zmdi zmdi-view-list-alt"></i>
-            </li>
+            <span style="color:white;font-size:25px;">Hi!</span>                
         </ul>
 
         <ul class="main-menu">
             <li>
-                <a href="/add_list"><i class="zmdi zmdi-home"></i> Dashboard</a>
+                <a href="/"><i class="zmdi zmdi-view-dashboard"></i> Dashboard</a>
             </li>
             <li>
-                <a href="" data-toggle="modal" data-target="#exampleModal"><i class="zmdi zmdi-collection-add"></i> Add Task</a>
-            </li>   
-            <li>
-                <a href="/archieve"><i class="zmdi zmdi-archive"></i> Archived</a>
+                <a href="/add_list"><i class="zmdi zmdi-collection-plus zmdi-hc-fw"></i> Add List</a>            
             </li>
             <li>
-                <a href="/trash"><i class="zmdi zmdi-delete zmd-fw"></i> Trash</a>
+                <a href="/archive"><i class="zmdi zmdi-archive"></i> Archive</a>
+            </li>
+            <li>
+                <a href="/trash"><i class="zmdi zmdi-delete"></i> Trash</a>
             </li>
             <li class="active">
-                <a href="/profile"><i class="zmdi zmdi-face zmd-fw"></i>Profile</a>
+                <a href="/profile"><i class="zmdi zmdi-account-circle"></i>Profile</a>
             </li>
-
         </ul>
     </aside>
 
     <section id="content">
         <div class="container">
-
-            <div class="card" id="profile-main">
-                <div class="pm-overview c-overflow">
-                    <div class="pmo-pic">
-                        <div class="p-relative">
-                            <a href="">
-                                <img class="img-responsive" src="assets/img/profile-pics/profile-pic-2.jpg" alt="">
-                            </a>
-
-                            <div class="dropdown pmop-message">
-                                <a data-toggle="dropdown" href="" class="btn palette-White bg btn-float z-depth-1">
-                                    <i class="zmdi zmdi-comment-text-alt"></i>
-                                </a>
-
-                            </div>
-
-                            <a href="" class="pmop-edit">
-                                <i class="zmdi zmdi-camera"></i> <span class="hidden-xs">Update Profile Picture</span>
-                            </a>
-                        </div>
+            <div style="margin-top: -70px;">
+                <div id='header'>
+                    <div class='c-header'>
+                        <h1>{{profile.name}}</h1>
                     </div>
                 </div>
 
-                <div class="pm-body clearfix">
-                    <ul class="tab-nav tn-justified">
-                        <li class="active waves-effect"><a href="profile-about.html">About</a></li>
-                    </ul>
-                    <div class="pmb-block">
-                        <div class="pmbb-header">
-                            <h2><i class="zmdi zmdi-account m-r-5"></i> Basic Information</h2>
-
-                            <ul class="actions">
-                                <li class="dropdown">
-                                    <a href="" data-toggle="dropdown">
-                                        <i class="zmdi zmdi-more-vert"></i>
-                                    </a>
-
-                                    <ul class="dropdown-menu dropdown-menu-right">
-                                        <li>
-                                            <a data-pmb-action="edit" href="">Edit</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="pmbb-body p-l-30">
-                            <div class="pmbb-view">
-                                <dl class="dl-horizontal">
-                                    <dt>Full Name</dt>
-                                    <dd>{{profile.full_name}}</dd>
-                                </dl>
-                                <dl class="dl-horizontal">
-                                    <dt>Gender</dt>
-                                    <dd>Female</dd>
-                                </dl>
+                <div class="card" id="profile-main">
+                    <form ng-submit="edit_profile()" role="form">
+                        <div class="pm-overview c-overflow row">
+                            <div id="pic" class="pmo-pic">
+                                <div class="p-relative">
+                                    <div><a href=''>
+                                        <!-- <img class='img-responsive' src='assets/img/user.png' alt=''> -->
+                                        <img class='img-responsive' src='./assets/img/profile-pics/7.jpg' alt=''>
+                                    </a></div>
+                                </div>   
                             </div>
+                            <div class="col-lg-12 col-xl-12">
+                                <input type="file" ng-disabled="is_disabled" id="p_upload" class="form-control input-sm save" onchange="angular.element(this).scope().profile_pic()" placeholder="Upload your profile picture here">
+                                <input type="hidden" ng-model="profile.name" name="img_path">
+                            </div>  
+                        </div>
 
-                            <div class="pmbb-edit">
-                                <dl class="dl-horizontal">
-                                    <dt class="p-t-10">Full Name</dt>
-                                    <dd>
-                                        <div class="fg-line">
-                                            <input type="text" class="form-control" placeholder="eg. Mallinda Hollaway">
-                                        </div>
+                        <div class="pm-body clearfix">                         
+                            <div class="row" style="margin-left: 5px;">
+                                <div class="active waves-effect col-lg-10" style="margin-top: 15px; margin-bottom: 20px; font-family: Arial, Helvetica, sans-serif;">
+                                    <h2><a href="/profile" style="color: black;">My Profile</a></h2>
+                                </div>
+                                <div class="active waves-effect col-lg-2" style="margin-top: 15px; margin-bottom: 20px;">
+                                    <h2><button class='btn btn-success bg waves-effect' ng-disabled="edit" ng-click="toggleReadonly('enable')"><i  class='zmdi zmdi-edit zmdi-hc-fw'></i></button></h2>
+                                </div>
+                            </div>
+                            <div class="pmb-block" style="border-top: 3px solid #bbb;">
+                                <div class="pmbb-header row">
+                                    <div class="col-lg-10 col-xl-10">
+                                        <h2><i class="zmdi zmdi-account m-r-5"></i> About</h2>
+                                    </div>
+                                    <div class="col-lg-2 col-xl-2">
 
-                                    </dd>
-                                </dl>
-                                <dl class="dl-horizontal">
-                                    <dt class="p-t-10">Gender</dt>
-                                    <dd>
-                                        <div class="fg-line">
-                                            <select class="form-control">
-                                                <option>Male</option>
-                                                <option>Female</option>
-                                                <option>Other</option>
-                                            </select>
+                                    </div>
+                                </div>
+                                <div class="pmbb-body p-l-30">
+                                    <div id="name">
+                                        <div class='pmbb-view form-group fg-line'>
+                                            <dl class='dl-horizontal'>
+                                                <dt>Full Name</dt>
+                                                <dd><input type='text' ng-disabled="is_disabled" ng-model="profile.full_name" class='form-control edit_p' name='name'></dd>
+                                            </dl>
                                         </div>
-                                    </dd>
-                                </dl>
-                                <dl class="dl-horizontal">
-                                    <dt class="p-t-10">Birthday</dt>
-                                    <dd>
-                                        <div class="dtp-container dropdown fg-line">
-                                            <input type='text' class="form-control date-picker" data-toggle="dropdown"
-                                                placeholder="Click here...">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="pmb-block">
+                                <div class="pmbb-header row">
+                                    <div class="col-lg-10 col-xl-10">
+                                        <h2><i class="zmdi zmdi-phone m-r-5"></i> Contact Information</h2>
+                                    </div>
+                                </div>
+                                <div class="pmbb-body p-l-30">
+                                    <div id="contact">
+                                        <div class='pmbb-view form-group fg-line'>
+                                            <dl class='dl-horizontal'>
+                                                <dt>Email Address</dt>
+                                                <dd><input type='text' ng-disabled="is_disabled" ng-model="profile.email" class='form-control edit_p' name='email'></dd>
+                                            </dl>
+                                            <dl class='dl-horizontal'>
+                                                <dt>Mobile Phone</dt>
+                                                <dd><input type='text' ng-disabled="is_disabled" ng-model="profile.phone" class='form-control edit_p' name='phone_no'></dd>
+                                            </dl>
+                                            <dl class='dl-horizontal'>
+                                                <dt>Password</dt>
+                                                <dd><input type='text' ng-disabled="is_disabled" ng-model="profile.password" class='form-control edit_p' name='password'></dd>
+                                            </dl>
                                         </div>
-                                    </dd>
-                                </dl>
-                                <dl class="dl-horizontal">
-                                    <dt class="p-t-10">Martial Status</dt>
-                                    <dd>
-                                        <div class="fg-line">
-                                            <select class="form-control">
-                                                <option>Single</option>
-                                                <option>Married</option>
-                                                <option>Other</option>
-                                            </select>
-                                        </div>
-                                    </dd>
-                                </dl>
-
-                                <div class="m-t-30">
-                                    <button class="btn btn-primary btn-sm">Save</button>
-                                    <button data-pmb-action="reset" class="btn btn-link btn-sm">Cancel</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class='m-t-30'>
+                                <div class="col-lg-10 col-xl-10"></div>
+                                <div class="col-lg-2 col-xl-2" style="margin-bottom: 20px;">
+                                    <button type="submit" ng-disabled="update" class='btn btn-primary bg waves-effect'>Save</button>
+                                    <button data-pmb-action='reset' class='btn btn-link btn-sm'>Cancel</button>
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-
-                    <div class="pmb-block">
-                        <div class="pmbb-header">
-                            <h2><i class="zmdi zmdi-phone m-r-5"></i> Contact Information</h2>
-
-                            <ul class="actions">
-                                <li class="dropdown">
-                                    <a href="" data-toggle="dropdown">
-                                        <i class="zmdi zmdi-more-vert"></i>
-                                    </a>
-
-                                    <ul class="dropdown-menu dropdown-menu-right">
-                                        <li>
-                                            <a data-pmb-action="edit" href="">Edit</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="pmbb-body p-l-30">
-                            <div class="pmbb-view">
-                                <dl class="dl-horizontal">
-                                    <dt>Mobile Phone</dt>
-                                    <dd>00971 12345678 9</dd>
-                                </dl>
-                                <dl class="dl-horizontal">
-                                    <dt>Email Address</dt>
-                                    <dd>malinda.h@gmail.com</dd>
-                                </dl>
-                            </div>
-
-                            <div class="pmbb-edit">
-                                <dl class="dl-horizontal">
-                                    <dt class="p-t-10">Mobile Phone</dt>
-                                    <dd>
-                                        <div class="fg-line">
-                                            <input type="text" class="form-control" placeholder="eg. 00971 12345678 9">
-                                        </div>
-                                    </dd>
-                                </dl>
-                                <dl class="dl-horizontal">
-                                    <dt class="p-t-10">Email Address</dt>
-                                    <dd>
-                                        <div class="fg-line">
-                                            <input type="email" class="form-control"
-                                                placeholder="eg. malinda.h@gmail.com">
-                                        </div>
-                                    </dd>
-                                </dl>
-
-                                <div class="m-t-30">
-                                    <button class="btn btn-primary btn-sm">Save</button>
-                                    <button data-pmb-action="reset" class="btn btn-link btn-sm">Cancel</button>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
+                    </form>    
                 </div>
             </div>
         </div>
-        <!-- Code for modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              ...
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
-    </div>
-    <!-- end Code for modal -->
     </section>
 </section>
+
+<!-- Javascript Libraries -->
 <script type="text/javascript-lazy" src="assets/vendors/bower_components/Waves/dist/waves.min.js"></script>
+<script type="text/javascript-lazy" src="assets/vendors/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
 <script type="text/javascript-lazy" src="assets/js/functions.js"></script>
 <script type="text/javascript-lazy" src="assets/js/actions.js"></script>
 <script type="text/javascript-lazy" src="assets/js/demo.js"></script>
