--- a/src/static/trash.html
+++ b/src/static/trash.html
@@ -25,7 +25,7 @@
                 <a href="/trash"><i class="zmdi zmdi-delete zmd-fw"></i> Trash</a>
             </li>
             <li>
-                <a href="/profile"><i class="zmdi zmdi-face zmd-fw"></i>Profile</a>
+                <a href="/profile"><i class="zmdi zmdi-account zmdi-hc-fw"></i>Profile</a>
             </li>
         </ul>
     </aside>
