register and forget added

--- a/src/static/login.html
+++ b/src/static/login.html
@@ -23,14 +23,14 @@
             <div class="lb-body">
                 <div class="form-group fg-float">
                     <div class="fg-line">
-                        <input type="text" class="input-sm form-control fg-input">
+                        <input type="text" ng-model="log_in.email" class="input-sm form-control fg-input">
                         <label class="fg-label">Email Address</label>
                     </div>
                 </div>
 
                 <div class="form-group fg-float">
                     <div class="fg-line">
-                        <input type="password" class="input-sm form-control fg-input">
+                        <input type="password" ng-model="log_in.password" class="input-sm form-control fg-input">
                         <label class="fg-label">Password</label>
                     </div>
                 </div>
@@ -47,7 +47,6 @@
         </div>
     </div>
     <script src="assets/js/app.js"></script>
-    <script src="assets/js/app_routing.js"></script>
 
 </body>
 <!-- #06135a -->
